@@ -1,3 +1,13 @@
+Mon Jun 07 09:17:23 2004  George Lebl <jirka@5z.com>
+
+	* config/XKeepsCrashing: Add system-config-display and also check
+	  for system-config-mouse.  FC2 is utter shit when it comes to
+	  failing X server anyway so on my test machine system-config-display
+	  don't work none anyway, but such is life, maybe it'll work for
+	  someone (but FC2 of course doesn't run that on X errors anyway).
+
+	* gui/gdmsetup.c: replace hacks with lesser hacks
+
 Tue Jun 01 11:24:46 2004  George Lebl <jirka@5z.com>
 
 	* gui/gdmlogin.c, gui/greeter/greeter_item_canvas.c,
